# simplegeom

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/simplegeom/: algorithm.h  common.h  io.h  simplegeom.h
source/: main.cpp
